# doc/openapi.json
@@ -150,6 +150,38 @@
           }
         },
         "type": "object"
+      },
+      "UserCreateIn": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "example": "https://example.com/schemas/UserCreateIn.json",
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "email": { "type": "string" },
+          "password": { "type": "string" }
+        },
+        "required": ["email", "password"],
+        "type": "object"
+      },
+      "UserCreateOut": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "example": "https://example.com/schemas/UserCreateOut.json",
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "email": { "type": "string" },
+          "id": { "format": "int64", "type": "integer" }
+        },
+        "required": ["id", "email"],
+        "type": "object"
       }
     }
   },
@@ -339,6 +371,98 @@
           }
         },
         "summary": "Get health"
+      }
+    },
+    "/api/users": {
+      "post": {
+        "operationId": "create-users",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/UserCreateIn" }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/UserCreateOut" }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Create users",
+        "tags": ["Users"]
+      }
+    },
+    "/api/users/auth": {
+      "post": {
+        "operationId": "create-users-auth",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/UserCreateIn" }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/UserCreateOut" }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Create users auth",
+        "tags": ["Users"]
+      }
+    },
+    "/api/users/session": {
+      "post": {
+        "operationId": "create-users-session",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/UserCreateIn" }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "No Content",
+            "headers": { "Set-Cookie": { "schema": { "type": "string" } } }
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Create users session",
+        "tags": ["Users"]
       }
     }
   }
